@@ -2529,6 +2529,9 @@ void KSpreadView::setText( const QString& _text )
     return;
 
   m_pTable->setText( m_pCanvas->markerRow(), m_pCanvas->markerColumn(), _text );
+  KSpreadCell* cell = m_pTable->cellAt( m_pCanvas->markerColumn(), m_pCanvas->markerRow() );
+  if(!cell->isValue() && !cell->isFormular() &&!cell->isBool() && !cell->isDate() && !cell->isTime())
+        m_pDoc->addStringCompletion(_text);
 }
 
 //------------------------------------------------
